--- a/gb/10/11/12/n3083023.md
+++ b/gb/10/11/12/n3083023.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cqksji3539/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cqksji3539/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cqksji3539/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台北新庄 ．新庄老街（上）</h2>
 
 <h6></h6>
@@ -12,7 +12,7 @@
 <p>拥有三百年历史的新庄老街，就位于今日的新庄路，大约一公里长的菁华区域内，古庙、老屋、旧巷与现代建筑杂处，老街上的广福宫、文昌祠、慈佑宫、武圣庙，都已被列为历史古迹。老街店铺栉比鳞次，虽然传统的店铺商号所剩无几，仅零星散落于老街狭窄巷弄间，仍然可以让旅人在寻寻觅觅中，发现新庄老街的历史风华与沧桑。</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">广福宫（二级古迹）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120420242063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">广福宫（二级古迹）</span></div>
 <p><!-- --></p>
 <p>初次造访新庄老街，才体会了这里旧街路窄及寻找车位的困难，难怪新庄人对于兴建捷运与维护古迹的取舍，态度相当的明确。老街附近的巷道大多是单行道，路旁又多划红线，外围的旧省道（中正路）则正在捷运施工中，空间更为局促，交通亦显困顿。</p>
 <p>开车绕了一圈，我便放弃寻找车位的念头，将车驶进大观街的一处民营停车场。停车费一小时20元，还算合理。从停车场走到新庄老街，大约三、五分钟的路程而已，也相当方便。</p>
@@ -23,22 +23,22 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">广福宫。 	</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120420262063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">广福宫。 	</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">三川殿。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120420292063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">三川殿。 </span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">	正殿。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120420312063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">	正殿。</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">广福宫保存的古碑之一（“奉两宪示禁碑”，1750年）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120426242063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">广福宫保存的古碑之一（“奉两宪示禁碑”，1750年）</span></div>
 <p><!-- --></p>
 <p>广福宫的前殿采三开间，三副门联清楚述说了三山国王的历史由来。有别于一般寺庙门联多歌颂神功浩荡，广福宫的门联则多了一分历史的描述与感喟。</p>
 <p>南宋末年，宋帝躲避元兵追击，一路逃难至广东，相传当地巾山、明山、独山的神灵化为神兵，击退元兵，使宋帝幸免于难。因而得到宋帝诏封为“三山国王”，从此受到当地粤籍百姓的敬祀。</p>
@@ -51,18 +51,18 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">广福宫旁的福德祠。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120426262063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">广福宫旁的福德祠。 </span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">	福德祠庙匾（光绪壬午年立，1882年）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120426292063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">	福德祠庙匾（光绪壬午年立，1882年）。</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">文昌祠（三级古迹）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120426312063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">文昌祠（三级古迹）</span></div>
 <p><!-- --></p>
 <p>沿着福德祠前的思明路向南行，再右转碧江街，不久就抵达了另一间古庙文昌祠。文昌祠创建于嘉庆18年（1813），是淡水厅继竹堑城（新竹）兴建文昌祠之后，所创建的第二间文昌祠，反映出新庄当时的地位及文风之盛。</p>
 <p>文昌祠最初设于老街慈佑宫（妈祖庙）的右后方，光绪元年（1875），因增设义私塾，以教育培育地方人才，旧址空间不足而迁建于现址。文昌祠从此成为新庄地方的文教中心。</p>
@@ -74,22 +74,22 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">文昌祠山门。	</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120431092063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">文昌祠山门。	</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">敬字亭。	。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120431122063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">敬字亭。	。</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">抱鼓石</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120431142063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">抱鼓石</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫（三级古迹）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120431172063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫（三级古迹）</span></div>
 <p><!-- --></p>
 <p>沿着碧江街前行，路过一间“万应堂”（有应公庙），接回大观街，再绕回新庄老街，续走往老街的热闹的区域。位于新庄路208号的慈佑宫是新庄最古老的寺庙，祀奉天上圣母妈祖。</p>
 <p>慈佑宫，俗称“新庄妈祖庙”，创建的年代有不同的版本说法。连横着的《台湾通史》云：“慈祐宫，在兴直堡新庄街，康熙廿五年（1686）建，祀天上圣母。”将慈佑宫的创立前推至清朝统治台湾之初。但与历史事实不尽相符。</p>
@@ -102,11 +102,11 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120439102063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120439132063.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
 </td>
 </tr>
 </table>
@@ -114,76 +114,76 @@
 <p>旅记日期：2009.01.04 </p>
 <p><p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120449212063-450x292.gif" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">（摄影： / 大纪元）</span></div>
 <p><!-- --><br />——本文转载自Tony的自然人文旅记http://www.tonyhuang.idv.tw/@</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫（新庄妈祖庙）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120439152063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫（新庄妈祖庙）。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫石狮子。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120439202063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫石狮子。 </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫古碑（一）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120439252063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫古碑（一）</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫古碑（二）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120449012063-450x338.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫古碑（二）</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">慈佑宫古碑（三）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120449062063-450x338.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">慈佑宫古碑（三）</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">从利济街望向慈佑宫。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120449112063-450x338.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">从利济街望向慈佑宫。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">眺望大汉溪及新海大桥（对岸为板桥市）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011120449162063-450x338.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">眺望大汉溪及新海大桥（对岸为板桥市）。</span></div>
 <p><!-- --></p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/12/18/n12630523.md#1">热带南国圣诞风情 到台湾屏东公园追极光</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/9/22/n12422503.md#1">瓜地马拉 色彩丰富的美景天堂</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/9/16/n12408117.md#1">探访罗马尼亚 旅行让心更温柔</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/9/15/n12405446.md#1">旅行如爱情 要懂得随遇而安</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/6/n13625736.md#1">台80多年老烟厂再造 PT1936文化体验</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/26/n13607236.md#1">台北内湖乐活公园樱花绽放 假日踏青赏樱</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/1/10/n13495237.md#1">到奥万大赏山景 呼吸森林芬多精疗愈身心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/31/n13472625.md#1">在凤凰谷鸟园 邂逅爱情鸟</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">我和孩子经历的神话（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12755606.md#1">被问到如何经营企业？ 马斯克：我是外星人</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12756200.md#1">《转法轮》中提及的若干史前文明案例（1）</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12763590.md#1">【有冇搞错】2+2≠4？荒谬教育背后的共产主义</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764458.md#1">【时事军事】疯狂的核飞机 将被核技术突破唤醒</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/22/n12766354.md#1">【拍案惊奇】川普将公开演讲 传15国拟整治脸书</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763495.md#1">【新闻看点】中印对峙首曝光 印军：中共丢脸</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12763649.md#1">【十字路口】美国台湾需慎防 缅甸政变是陷阱？</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764532.md#1">前国安部长陷公共情妇案 被从轻发落内幕曝光</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12761987.md#1">41岁赵小侨宣布怀孕 求子路艰辛终如愿</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763516.md#1">沈殿霞逝世13周年 郑欣宜发长文纪念母亲</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763226.md#1">刘嘉玲晒与章子怡合照：天涯海角也能相连</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762275.md#1">旧合约禁韩国Solo 王嘉尔曝GOT7多人准备专辑</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763107.md#1">被夫要求扯断口罩带子 天心曝背后原因超暖心</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762882.md#1">癌症风险降50%！吃7种食物 养出不生病体质</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764713.md#1">若突发停电 如何安全保存和处理冰箱食物</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12755049.md#1">白米饭补脾胃、稳血糖 糖尿病也能安心吃</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12761953.md#1">美国男子声称UFO降落后院 外星人送他松饼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cqksji3539/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cqksji3539/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/12/n3083023.htm">台北新庄 ．新庄老街（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/12/n3083023.htm">台北新庄 ．新庄老街（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cqksji3539/djy/blob/master/gb/10/11/12/n3083023.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cqksji3539/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cqksji3539/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/10/11/12/n3083023.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
